<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_launcher"
            android:id="@+id/imagemovie"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="60dp"
            app:layout_constraintHorizontal_bias="0.498" android:contentDescription="@string/todo"
    />
    <TextView
            android:text="@string/fragment_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewtitle"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imagemovie" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/fragment_detail_home_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewhomepage"
            app:layout_constraintTop_toBottomOf="@+id/textViewtitle" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:linksClickable="true"/>
    <TextView
            android:text="@string/fragment_detail_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewoverview"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewhomepage" android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.056"/>
    <Button
            android:text="@string/fragment_button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonexit"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/buttonreproducir"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textViewoverview"/>
    <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonreproducir" app:layout_constraintEnd_toStartOf="@+id/buttonexit"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewoverview"/>
</androidx.constraintlayout.widget.ConstraintLayout>
