<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="130dp"
                    android:id="@+id/imageView_poster"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@mipmap/ic_launcher"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:text="@string/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_title"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView_poster"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/releaseDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_festreno"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView_poster"
                    app:layout_constraintTop_toBottomOf="@+id/textView_title"/>
            <TextView
                    android:text="@string/genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_genre"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@+id/textView_festreno"
                    app:layout_constraintEnd_toEndOf="@+id/textView_festreno"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/textView_festreno"/>
            <TextView
                    android:text="@string/vote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_voto"
                    android:layout_marginTop="2dp"
                    android:textSize="24sp"
                    android:textColor="#D80A0A0A"
                    android:textStyle="bold"
                    android:background="@drawable/round_corner"
                    app:layout_constraintStart_toStartOf="@+id/textView_genre"
                    app:layout_constraintTop_toBottomOf="@+id/textView_genre"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView_poster"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</merge>
